add large photo display

--- a/src/app/mainPage/mainPage.component.html
+++ b/src/app/mainPage/mainPage.component.html
@@ -1,5 +1,5 @@
-
 <div class="template" id="primaryAboutTextTemplate">
-        <div class="primeryTitle">{{ primaryAboutTitle }}</div>
-        <div class="primeryText">{{ primaryAboutText }}</div>
-    </div>
+    <h1 class="primeryTitle">{{ primaryAboutTitle }}</h1>
+    <h2 class="primerySubTitle">{{ primaryAboutSubTitle }}</h2>
+    <div class="primeryText">{{ primaryAboutText }}</div>
+</div>
