--- a/src/app/mainPage/mainPage.component.css
+++ b/src/app/mainPage/mainPage.component.css
@@ -7,7 +7,15 @@
 .primeryTitle {
     font-size: 78px;
     margin-right: 50px;
-    margin-top: 170px;
+    margin-top: 80px;
+    text-align: right;
+    color:white;
+}
+
+.primerySubTitle {
+    font-size: 50px;
+    margin-right: 50px;
+    margin-top: 30px;
     text-align: right;
     color:white;
 }
@@ -22,3 +30,4 @@
     border-color: black;
     white-space: pre-wrap;
 }
+
