--- a/src/app/photos/photosFood/photosFood.component.html
+++ b/src/app/photos/photosFood/photosFood.component.html
@@ -1,8 +1,7 @@
-
-
-
-<div class="photosWrapper" >
+<div class="photosWrapper">
     <div *ngFor='let photo of photosArray ' class="photo">
-        <div><pm-photo [photo]= 'photo'></pm-photo></div>
+        <div>
+            <pm-photo [photo]='photo'></pm-photo>
+        </div>
     </div>
 </div>
