--- a/src/app/photos/photo.component.css
+++ b/src/app/photos/photo.component.css
@@ -1,4 +1,8 @@
 .bigPhotoWrapper{
-    
+    text-align: -webkit-center;  background-color:rgba(0, 0, 0, 0.5); height: 100%;  
 
+}
+
+.image{
+    width: 650px; height: 625px; margin-top: 10%;
 }
